--- a/views/moroneyDFAM2.html
+++ b/views/moroneyDFAM2.html
@@ -42,11 +42,11 @@
                     }
                 }
                 if(stateCheck){
-                    let conclusion = "After consuming the whole string, the DFA ends in the accepting state, "
+                    let conclusion = "After consuming the whole string, the DFA ends in an accepting state, "
                         + "<b>" + "q0" + "</b>" + ". Thus, the inputted string is " + "<b>" + "accepted." + "</b>";
                     output.innerHTML += "<pre>" + conclusion + "</pre>";
                 } else {
-                    let conclusion = "After consuming the whole string, the DFA does not end in the accepting state, but rather in "
+                    let conclusion = "After consuming the whole string, the DFA does not end in an accepting state, but rather in "
                         + "<b>" + "q1" + "</b>" + ". Thus, the inputted string is " + "<b>" + "rejected." + "</b>";
                     output.innerHTML += "<pre>" + conclusion + "</pre>";
                 }
@@ -75,8 +75,8 @@
 <p style="text-align: center">M2 = (Q, E, S, q0, F) where Q = {q0, q1}, E = {0, 1}, S = { (q0, 0) --> q1, (q0, 1) --> q1, (q1, 0) --> q0, (q1, 1) --> q0 },
     q0 = q0, F = {q0}</p>
 <p style="text-align: center">L(M2) = {w | the length of w is even}</p>
-<p style="text-align: center">**2 states, 2 chars in alphabet, Start State: 0, Accept States: q0, Transitions: (q0,0,q1)|
-    (q0,1,q1)|(q1,0,q0)|(q1,1,q0)**</p>
+<p style="text-align: center">**2 states, 2 chars in alphabet, Start State: 0, Accept States: q0, Transitions:
+    (q0,0,q1)|(q0,1,q1)|(q1,0,q0)|(q1,1,q0)**</p>
 <p style="text-align: center">**For modifying DFA in Create your own DFA</p>
 <div class="image">
     <img src="../images/CSC_4210_DFA_evens.jpg">
