--- a/views/custom.html
+++ b/views/custom.html
@@ -9,7 +9,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <style>
         body {
-            font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+            font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
         }
 
         a {
@@ -25,6 +25,7 @@
 
         b {
             font: 18px "Lucida Grande", Helvetica, Arial, sans-serif;
+            font-weight: bold;
         }
 
         .image img {
@@ -334,7 +335,7 @@
     <label for="transition">Transitions (please follow the format below, each rule separated by '|', no spaces):</label>
     <div class="input-group">
         <input type="text" name="transition" id="transition" class="form-control"
-               placeholder="(current_state,alphabet,next_state)|(...)" required="true">
+               placeholder="(current_state,alphabet,next_state)|(q0,1,q1)|..." required="true">
         <button class="btn btn-info" id="btnSubmit5">Submit</button>
     </div>
     <div class="container" id="transitionOutput">
