--- a/views/moroneyDFAM3.html
+++ b/views/moroneyDFAM3.html
@@ -9,7 +9,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <style>
         body {
-            font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+            font: 16px "Lucida Grande", Helvetica, Arial, sans-serif;
         }
 
         a {
@@ -25,6 +25,7 @@
 
         b {
             font: 18px "Lucida Grande", Helvetica, Arial, sans-serif;
+            font-weight: bold;
         }
 
         .image img {
